<resources>
    <string name="app_name">TimeTrix</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_initial_setting_page">TimeTrix</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="filename">FILENAME</string>
    <string name="list_object">LIST_OBJECT</string>
    <string name="add_notes_str">Add notes!</string>
    <string name="done_str">Done</string>
    <string name="file_could_not_update_str">File could not be updated</string>
    <string name="cancel_str">Cancel</string>
    <string name="context_menu_description_str">Delete this note!</string>
    <string name="lorem_ipsum_str">Lorem Ipsum</string>
    <string name="add_notes_here_str">Add notes here</string>
    <string name="add_title_here_str">Add title here</string>
    <string name="delete_str">Delete</string>
    <string name="edit_str">Edit</string>
    <string name="star_it_str">Add star</string>
    <string name="add_alarm_str">Add reminder</string>
    <string name="mute_notification_str">Mute notification</string>
    <string name="give_us_feedback_str">Give us feedback</string>
    <string name="write_a_feedback_str">Write a feedback</string>
    <string name="title_activity_settings">Settings</string>
    <string name="edit_note_str">Edit note</string>
    <string name="JSONArray_parse_fail_err_str">JSONArray parse failed</string>
    <string name="add_tag_str">Add tag</string>
    <string name="edit_the_note_str">Edit the note</string>
    <string name="delete_the_note_str">Delete the note</string>
    <string name="add_note_str">Add note</string>
    <string name="add_section_str">Add section</string>
    <string name="give_feedback_here_str">Give feedback here!</string>
    <string name="submit_str">Submit</string>
    <string name="select_a_choice">Select a choice</string>
    <string name="all_notes_str">All notes</string>
    <string name="starred_str">Starred</string>
    <string name="expired_str">Tags</string>
    <string name="search_the_notes_str">Search the notes</string>
    <string name="add_another_section_str">Add another section</string>
    <string name="title_activity_add_another_section">Add another section</string>
    <string name="oops_made_a_mistake_str">Oops! Made a mistake!</string>
    <string name="undo_str">Undo</string>
    <string name="all_note_is_corrupted_err_str">allNote is corrupted</string>
    <string name="undo_failed_err_str">Undo failed!</string>
    <string name="updating_list_failed_err_str">Updating list failed…</string>
    <string name="write_tag_name_pick_a_color_str">Write tag name and pick a color</string>
    <string name="apply_tag_str">Apply tag!</string>
    <string name="note_deleted_to_str">Note deleted!</string>
    <string name="operation_failed_tag_not_apply_to_str">Operation failed!\n TAG not applied</string>
    <string name="empty_sub_name_not_to_str">Empty section name is not allowed!</string>
    <string name="back_str">Back</string>
    <string name="enter_lec_address_str">Enter lecture address</string>
    <string name="enter_weight_str">Enter weightage</string>
    <string name="enter_note_desc_str">Enter description</string>
    <string name="enter_sub_name_str">Enter the section name</string>
    <string name="first_time_use_app_str">First time using the app! Don\'t worry just fill in the following details!</string>
    <string name="sections_str">Sections</string>
    <string name="empty_tag_nt_allowed_to_str">Empty tag is not allowed</string>
    <string name="enable_password_protection_str">Enable password protection: </string>
    <string name="enable_cloud_sync_str">Enable cloud syncing:</string>
    <string name="delete_all_data_str">Delete all data</string>
    <string name="save_all_content_pdf_str">Save all content as PDF</string>
    <string name="delete_all_the_data_str">Delete all the data</string>
    <string name="it_ll_delete_all_the_data_str">It\'ll delete all the data. Are you sure?</string>
    <string name="yes_str">Yes</string>
    <string name="no_str">No</string>
    <string name="enter_the_username_str">Enter the username</string>
    <string name="enter_the_password_str">Enter the password</string>
    <string name="empty_fields_nt_allowed_str">Empty fields are not allowed</string>
    <string name="facebook_app_id">922492101212322</string>
    <string name="user_str">User</string>
    <string name="timetrix_str">TimeTrix</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_password">Enable password</string>
    <string name="pref_enable_password">Enable password for the security of the app
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">Notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="go_back_str">Go Back</string>
    <string name="transition_string">transitionTest</string>
    <string name="delete_section_str">Delete the Section</string>
    <string name="do_you_want_del_sub_str">Do you want to delete this section</string>
    <string name="ok_str">OK</string>
    <string name="are_you_sure_str">Are you sure?</string>
    <string name="all_your_inform_deleted_str">All you information related to the section will be deleted!</string>
    <string name="section_details_str">Section Details</string>
    <string name="section_name_str">Section Name:</string>
    <string name="description_name_str">Description:</string>
    <string name="location_str">Location:</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="confirm_the_password">Confirm the password_str</string>
    <string name="details_str">Details</string>
    <string name="description_str">Description</string>
    <string name="update_str">Update</string>
    <string name="empty_field_not_allowed_str">Empty field is not allowed</string>
    <string name="password_didnt_match_str">Password did not match!</string>
    <string name="profile_picture_content_desc">Profile picture</string>
    <string name="user_email_com_str">user@email.com</string>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value"/>
    <string name="title_activity_note_detail">NoteDetailActivity</string>
</resources>