<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="0dp"
                tools:mContext="com.atulgpt.www.timetrix.AddAnotherSubject">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarAddSub"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="8dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/testInputLayoutEnterSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarAddSub"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp">

        <EditText
            android:id="@+id/editTextSubName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_sub_name_str"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/testInputLayoutEnterProf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/testInputLayoutEnterSubject"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/editTextProfName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_prof_name_str"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/testInputLayoutEnterWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/testInputLayoutEnterProf"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/editTextWeigh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_weight_str"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/testInputLayoutEnterLectureHall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/testInputLayoutEnterWeight"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/editTextLecAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_lec_address_str"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/testInputLayoutEnterLectureHall"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="4dp"
        android:text="@string/done_str"/>
</RelativeLayout>
