<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="subject"
            type="com.atulgpt.www.timetrix.dataBinders.SectionDetailsBinder"/>
    </data>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SectionDetailsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarSubDetail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="8dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/testInputLayoutEnterSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarSubDetail"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp">

        <EditText
            android:id="@+id/textViewSectionName"
            android:text="@{subject.name}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/section_name_str"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/testInputLayoutEnterDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/testInputLayoutEnterSection"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/textViewDescriptionName"
            android:text="@{subject.description}"
            android:layout_alignBaseline="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_str"
            android:maxLines="1"
            android:lines="4"
            android:gravity="top|start"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/testInputLayoutEnterDescription"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="4dp"
        android:text="@string/update_str"/>
</RelativeLayout>
</layout>